<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/primaryDarkColor"
        android:padding="0dp"

        app:cardCornerRadius="@dimen/corner_radius"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_analysis"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:contentDescription="@string/image_analysis"
                app:srcCompat="@drawable/ic_baseline_image_not_supported_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/empty_str"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textView_date"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/empty_str"
                    android:textAlignment="center"
                    android:textColorHighlight="@color/primaryDarkColor" />

                <TextView
                    android:id="@+id/textView_diagnosis"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/empty_str"
                    android:textAlignment="center"
                    android:textAllCaps="false" />


                <ImageButton
                    android:id="@+id/imageButton_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primaryDarkColor"
                    android:contentDescription="@string/delete"
                    android:foregroundTint="@color/secondaryDarkColor"
                    android:minHeight="48dp"
                    app:srcCompat="@drawable/ic_baseline_delete_24"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>